# parquet_azure_fdw

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  cargo-deny.toml  deny.toml  parquet_azure_fdw.control
.github/workflows/: ci.yaml  release-apt.yaml  release.yaml
packaging/apt/: publish-repo.sh
packaging/deb/: build-deb.sh
scripts/: start-azurite.sh
src/: error.rs  lib.rs  redact.rs  runtime.rs
src/azure/: auth.rs  mod.rs  reader.rs  writer.rs
src/convert/: arrow_to_pg.rs  mod.rs  partition_datum.rs  pg_to_arrow.rs
src/fdw/: glob.rs  import_schema.rs  mod.rs  options.rs  parallel.rs  partition.rs  pg_op_oids.rs  pushdown.rs  pushdown_walk.rs  scan.rs
src/fdw/modify/: coordinator.rs  insert.rs  kernel.rs  mod.rs  rowid.rs  scan_handoff.rs  update.rs
src/parquet_io/: mod.rs  multifile.rs  reader.rs  writer.rs
src/test_harness/: fake_blob_store.rs  mod.rs
tests/: apply_edits.rs  auth.rs  azure_client.rs  azure_etag.rs  fake_list_smoke.rs  fake_xml_schema.rs  glob_listing.rs  import_schema.rs  multifile_sorted.rs  options.rs  parquet_reader.rs  parquet_writer.rs  partition_write.rs  pg_to_arrow.rs  pushdown.rs  pushdown_row_group_prune.rs  pushdown_soundness.rs  rowid.rs  runtime.rs  staged_rewrite.rs  update_delete.rs
tests/common/: mod.rs
tests/fixtures/: two_rowgroups.parquet
