[package]
name = "parquet_azure_fdw"
version = "0.1.0"
edition = "2021"
license = "PostgreSQL"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["pg14"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = ["dep:wiremock"]

[dependencies]
pgrx = "=0.18.1"
parquet = { version = "59", features = ["async", "arrow"] }
regex = "1"
roaring = "0.11.4"
arrow = "59"
azure_core = "1.0"
azure_storage_blob = "1.0"
azure_identity = "1.0"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "io-util", "macros", "sync"] }
thiserror = "2.0.18"
uuid = { version = "1.23.3", features = ["v4"] }
bytes = "1.12.0"
futures = "0.3.32"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
serde_json = "1.0.150"
url = "2.5.8"
wiremock = { version = "0.6.5", optional = true }

[dev-dependencies]
pgrx-tests = "=0.18.1"
rstest = "0.26.1"
tokio-test = "0.4.5"
tempfile = "3.27"
wiremock = "0.6.5"
url = "2.5.8"
